--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
               её просто не существует. Исследователи
-              <a class="focus-tips__paragraph-link" href="!0"
+              <a class="focus-tips__paragraph-link" href="https://dana.org/article/multicosts-of-multitasking/"
                 target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах
               одновременно. А когда в поле внимания попадает несколько важных
               задач, организм паникует и выделяет кортизол и адреналин —
@@ -173,7 +173,7 @@
             <p class="focus-tips__paragraph-text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a class="focus-tips__paragraph-link"
-                href="!0"
+                href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                 target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как
               после просмотра городских пейзажей она наоборот понижается.
               Можно совместить прогулку с физическими упражнениями или бегом —
