--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
   <link rel="apple-touch-icon" href="./images/mobile-icon.png">
   <link rel="stylesheet" href="./styles/variables.css" />
-  <link rel="stylesheet" href="./styles/light.css" />
-  <link rel="stylesheet" href="./styles/dark.css" />
-  <link rel="stylesheet" href="./fonts/fonts.css" />
   <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/dark.css" />
+  <link rel="stylesheet" href="./styles/light.css" />
+  <link rel="stylesheet" href="./fonts/fonts.css" />
   <link rel="stylesheet" href="./styles/globals.css" />
   <title>Сложно сосредоточиться</title>
 </head>
@@ -35,7 +35,7 @@
           </button>
         </li>
         <li class="header__theme-menu-item">
-          <button class="header__theme-menu-button header__theme-menu-button_type_dark">
+          <button class="header__theme-menu-button header__theme-menu-button_type_dark" id="default__button">
             Неон
           </button>
         </li>
@@ -210,11 +210,11 @@
       <h2 class="card__text">А можно в картинках?</h2>
 
       <div class="card__items">
-        <img class="card__item card__item_sunset" src="images/sunset.png" alt="sunset" loading="lazy" />
-        <img class="card__item card__item_iceCream" src="images/ice-cream.png" alt="ice-cream" loading="lazy" />
-        <img class="card__item card__item_tape" src="images/tape.png" alt="tape" loading="lazy" />
-        <img class="card__item card__item_books" src="images/books.png" alt="books" loading="lazy" />
-        <img class="card__item card__item_street" src="images/street.png" alt="street" loading="lazy" />
+        <img class="card__item card__item_sunset" src="images/sunset.png" alt="Красивый закат на фоне заснеженных гор" loading="lazy" />
+        <img class="card__item card__item_iceCream" src="images/ice-cream.png" alt="Тарелка мороженного с фруктами и взбитым кремом" loading="lazy" />
+        <img class="card__item card__item_tape" src="images/tape.png" alt="Аудиокассета" loading="lazy" />
+        <img class="card__item card__item_books" src="images/books.png" alt="Стопка книг" loading="lazy" />
+        <img class="card__item card__item_street" src="images/street.png" alt="Улица" loading="lazy" />
       </div>
     </section>
   </main>
