--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   </header>
 
   <main class="main">
-    <section class="focus-tips__cards">
+    <section class="focus-tips__cards section__main">
       <h2 class="focus-tips__title">Почему сосредоточиться так сложно</h2>
-      <div class="focus-tips__card flex">
+      <div class="focus-tips__card">
         <article class="focus-tips__paragraph content__list">
           <h3 class="focus-tips__paragraph-title bold">Многозадачность</h3>
           <p class="focus-tips__paragraph-text">
@@ -88,9 +88,9 @@
     </section>
 
 
-    <section class="focus-tips__cards flex">
+    <section class="focus-tips__cards">
       <h2 class="focus-tips__title">Что снижает концентрацию внимания?</h2>
-      <div class="focus-tips__card">
+      <div class="focus-tips__card flex">
         <article class="focus-tips__paragraph content__item">
           <h3 class="focus-tips__paragraph-title bold">Многозадачность</h3>
           <p class="focus-tips__paragraph-text">
@@ -131,12 +131,12 @@
       </div>
     </section>
 
-    <section class="focus-tips__cards">
+    <section class="focus-tips__cards section__main-content">
       <h2 class="focus-tips__title">
         Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
         секунд)
       </h2>
-      <div class="focus-tips__card flex">
+      <div class="focus-tips__card">
         <h3 class="focus-tips__paragraph-title bold">
           5 простых (на самом деле не очень) советов
         </h3>
